--- a/css/addEmployee.css
+++ b/css/addEmployee.css
@@ -5,7 +5,7 @@ body {
 
 .header {
     padding: 15px 0;
-    background-color:  #ffffff;
+    background-color: #ffffff;
 }
 
 .header-content {
@@ -45,7 +45,8 @@ body {
 * {
     box-sizing: border-box;
 }
-.form-content{
+
+.form-content {
     min-height: calc(100% - 80px);
     background-color: #f7f7f7;
     display: flex;
@@ -53,7 +54,8 @@ body {
     align-items: center;
     border: 0px solid green;
 }
-.form{
+
+.form {
     width: 65%;
     padding: 44px 60px;
     background: #ffffff 0% 0% no-repeat padding-box;
@@ -63,7 +65,8 @@ body {
     opacity: 1;
 
 }
-.form-head{
+
+.form-head {
     font: normal normal bold 24px/37px Roboto;
     letter-spacing: 0px;
     color: #42515f;
@@ -71,132 +74,124 @@ body {
     opacity: 1;
     padding-bottom: 20px;
 }
-.row-content{
+
+.row-content {
     display: flex;
     flex-direction: row;
     margin-bottom: 10px;
     align-items: center;
     border: 0px solid green;
 }
-.label{
+
+.label {
     min-width: 140px;
 
 }
-label{
+
+label {
     padding: 12px 12px 12px 0;
     display: inline-block;
 }
-.text{
+
+.text {
     font-size: 16px;
     color: #42515f;
     opacity: 1;
     font-family: Roboto;
 }
-.input{
+
+.input {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
 }
-.profile-radio.content{
+
+.profile-radio.content {
     display: flex;
     flex-direction: row;
 
 }
 
-.profile-radio.content > label{
+.profile-radio.content>label {
     display: flex;
     flex-direction: row;
     align-items: center;
 
 }
-.profile{
+
+.profile {
     width: 40px;
     border-radius: 50%;
     margin-left: 12px;
 }
-select {
+select{
     padding: 12px;
     border: 1px solid #ccc;
-    border-radius:  4px;
+    border-radius: 4px;
     resize: vertical;
     font: normal normal normal 16px Roboto;
     letter-spacing: 0px;
-    color: #42515f;
+    columns: #42515f;
     background-color: transparent;
-    -webkit-border-radius:  4px;
-    -moz-border-radius:  4px;
-    -ms-border-radius:  4px;
-    -o-border-radius:  4px;
 }
 .buttonParent{
     display: flex;
     margin-bottom: 10px;
     justify-content: space-between;
     margin-top: 20px;
+
 }
 .button{
-    font-size: 20px;
+    font-size: 17px;
     font-family: Roboto;
     letter-spacing: 0px;
     color: #42515f;
     opacity: 1;
-    background: transparent;
+    background: #e9e9e9;
     border: none;
-    cursor: pointer;
-    border: 1px solid grey;
-    padding: 7px 7px;
-    min-width: 140px;
     font-weight: 400;
+    min-width: 110px;
+    padding: 5px 5px;
+    border: 1px solid #707070;
+    cursor: pointer;
+    border-radius: 8px;
 }
 .submitButton{
-    
+    border: 1px solid #707070;
+    border-radius: 8px;
     background-color: #f5f5f5;
-    margin-right: 30px ;
-}
-.cancelButon{
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    background-color: #f5f5f5;
-    margin-right: 40px;
-    
-}
+    margin-right: 30px;
 
-a:link, a:visited {
-    background-color: #d5d1d0;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    text-decoration: none;
-  }
-  a:hover, a:active {
-    background-color: red;
-  }
 
-  @media only screen and (max-width: 960px){
+}
+.cancelButton{
+    text-decoration: none;
+    text-align: center;
+}
+@media only screen and (max-width: 960px){
     .cancelButton{
         margin-left: 0px;
     }
-
-.form{
-    width: 85%;
-    padding: 44px 20px;
-}
-}
-
-@media only screen and (max-width: 600px){
     .form{
+        width: 85%;
+        padding: 44px 20px;
+    }
+}
+@media only screen and (max-width: 600px){
+    .from{
         margin-top: 10px;
     }
     .row{
         flex-direction: column;
+
     }
     .uploadButton{
         justify-content: flex-start;
     }
     .profile-radio-button{
-        flex-wrap: wrap;
+        flex-flow: wrap;
     }
     .submit-reset{
         width: 100%;
@@ -206,4 +201,20 @@ a:link, a:visited {
         justify-content: space-between;
         margin-bottom: 20px;
     }
+    .submitButton{
+        margin: 0;
+
+
+    }
+    .buttonParent{
+        flex-direction: column-reverse;
+        align-items: flex-start;
+    }
+}
+error-output{
+    margin-left: 10px;
+    font-size: 12px;
+    font-style: italic;
+    color: red;
+
 }
